QQuickSwitch: fix the order of checkedChanged() vs. clicked()

And emit clicked() also when the switch was dragged to make it possible
to use clicked() reliably to detect user interaction.

Change-Id: Iefbd95b90ed40f04d84e03e247a8ac12c7f0e9ca
Task-number: QTBUG-52558
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>